derive/tests/compile_fail/unsupported_flatten.stderr
error: config::Deserialize does not support #[serde(flatten)]
 --> tests/compile_fail/unsupported_flatten.rs:5:13
  |
5 |     #[serde(flatten)]
  |             ^^^^^^^
